fixed code wrapping error on reference pages

--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -550,7 +550,9 @@ div.row {
   .eight {
     flex: 1 1 75%;
     padding-right: $unit*2;
-
+    code{
+      white-space: normal !important;
+    }
     h4 {
       font-weight: 100;
       font-size: 2rem;
@@ -570,6 +572,7 @@ div.row {
           display: inline-block;
           margin-bottom: $unit;
         }
+
         ul {
           margin-left: $unit*2;
           padding-left: $unit*2;
